; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_match.c_cmp_key_mbs.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_match.c_cmp_key_mbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_rb_node = type { i32 }
%struct.match_file = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.archive_rb_node*, i8*)* @cmp_key_mbs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_key_mbs(%struct.archive_rb_node* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.archive_rb_node*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.match_file*, align 8
  %7 = alloca i8*, align 8
  store %struct.archive_rb_node* %0, %struct.archive_rb_node** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load %struct.archive_rb_node*, %struct.archive_rb_node** %4, align 8
  %9 = ptrtoint %struct.archive_rb_node* %8 to i64
  %10 = inttoptr i64 %9 to %struct.match_file*
  store %struct.match_file* %10, %struct.match_file** %6, align 8
  %11 = load %struct.match_file*, %struct.match_file** %6, align 8
  %12 = getelementptr inbounds %struct.match_file, %struct.match_file* %11, i32 0, i32 0
  %13 = call i32 @archive_mstring_get_mbs(i32* null, i32* %12, i8** %7)
  %14 = load i8*, i8** %7, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %21

17:                                               ; preds = %2
  %18 = load i8*, i8** %7, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @strcmp(i8* %18, i8* %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %17, %16
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @archive_mstring_get_mbs(i32*, i32*, i8**) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
